add(1) validate and delete disquette
