# swagger_output.json
@@ -2,8 +2,8 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "API GESTION DONNEES",
+    "description": "Warning : Cette documentation api ne prends pas en compte l'authentification par token"
   },
   "host": "localhost:8081",
   "basePath": "/",
@@ -11,13 +11,25 @@
   "schemes": [
     "http"
   ],
-  "consumes": [],
-  "produces": [],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header",
+      "description": "C'est ici que nous devrions entrer la token déliverer par le serveur lors de la connexion"
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/disquette": {
       "post": {
         "tags": [],
-        "description": "",
+        "description": "Permet d'ajouter une disquette",
         "parameters": [
           {
             "name": "obj",
@@ -25,17 +37,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "idAutor": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "userId\r": {
-                  "type": "string",
-                  "example": "any"
+                "userId": {
+                  "type": "integer",
+                  "example": 26
                 },
                 "content": {
                   "type": "string",
-                  "example": "any"
+                  "example": "lorem ipsum"
                 }
               }
             }
@@ -69,7 +77,7 @@
     "/favori": {
       "post": {
         "tags": [],
-        "description": "",
+        "description": "Permet d'ajouter une disquette a la liste des favoris d'un utilisateur donné",
         "parameters": [
           {
             "name": "obj",
@@ -77,17 +85,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "idUser": {
-                  "type": "string",
-                  "example": "any"
-                },
                 "userId": {
-                  "type": "string",
-                  "example": "any"
+                  "type": "integer",
+                  "example": "26"
                 },
                 "idDisquette": {
-                  "type": "string",
-                  "example": "any"
+                  "type": "integer",
+                  "example": "20"
                 }
               }
             }
@@ -97,9 +101,6 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -107,7 +108,7 @@
       },
       "delete": {
         "tags": [],
-        "description": "",
+        "description": "Permet de retiré de la liste des favoris une disquette d'un utilisateur donné",
         "parameters": [
           {
             "name": "obj",
@@ -115,20 +116,12 @@
             "schema": {
               "type": "object",
               "properties": {
-                "idUser": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "userId\r": {
-                  "type": "string",
-                  "example": "any"
-                },
                 "userId": {
-                  "type": "string",
+                  "type": "integer",
                   "example": "any"
                 },
                 "idDisquette": {
-                  "type": "string",
+                  "type": "integer",
                   "example": "any"
                 }
               }
@@ -148,13 +141,13 @@
     "/favori/{userId}": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Récupere toutes les diquettes Likées d'un utilisateur donné",
         "parameters": [
           {
             "name": "userId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer"
           }
         ],
         "responses": {
@@ -170,7 +163,7 @@
     "/getAllUser": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Permet de récupérer tous les utilisateur qui ne sont pas admin",
         "parameters": [],
         "responses": {
           "200": {
@@ -185,7 +178,7 @@
     "/user": {
       "delete": {
         "tags": [],
-        "description": "",
+        "description": "Permet a un administrateur de supprimer un utilisateur",
         "parameters": [
           {
             "name": "obj",
@@ -193,13 +186,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "type": "string",
-                  "example": "any"
+                "userId": {
+                  "type": "integer",
+                  "example": "1"
                 },
-                "userIdDelete\r": {
-                  "type": "string",
-                  "example": "any"
+                "userIdDelete": {
+                  "type": "integer",
+                  "example": "2"
                 }
               }
             }
